fixing overflow on nav

--- a/src/input.css
+++ b/src/input.css
@@ -21,6 +21,10 @@ html {
   scroll-behavior: smooth;
 }
 
+#wrapper {
+  position: relative;
+}
+
 #particles-js {
   position: absolute;
   width: 100%;
