--- a/src/output.css
+++ b/src/output.css
@@ -612,29 +612,14 @@ video {
   margin-bottom: 11rem;
 }
 
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.my-60{
-  margin-top: 15rem;
-  margin-bottom: 15rem;
-}
-
-.my-56{
-  margin-top: 14rem;
-  margin-bottom: 14rem;
-}
-
-.my-52{
-  margin-top: 13rem;
-  margin-bottom: 13rem;
-}
-
 .my-48{
   margin-top: 12rem;
   margin-bottom: 12rem;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .mb-6{
@@ -788,6 +773,10 @@ video {
 
 html {
   scroll-behavior: smooth;
+}
+
+#wrapper {
+  position: relative;
 }
 
 #particles-js {
